--- a/client/src/components/AddVideogame/AddVideogame.css
+++ b/client/src/components/AddVideogame/AddVideogame.css
@@ -13,4 +13,45 @@
 
 .form-container{
     text-align: center;
+    color:rgb(41, 207, 207);
+}
+
+h3{
+    font-size:30px;
+}
+
+.input-field{
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.textarea{
+    width: 400px;
+    height: 100px;
+    border-radius:15px;
+}
+
+.input-field label{
+    margin: 20px;
+}
+
+.extra-text{
+    font-size: 12px;
+}
+
+.button-add{
+    width: 150px;
+    height: 50px;
+    color: aqua;
+    background-color: darkslategrey;
+    border-radius: 30px;
+    text-shadow: 2px 2px 5px red;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+.input{
+border-radius: 15px;
 }
