--- a/client/src/components/AddVideogame/AddVideogame.css
+++ b/client/src/components/AddVideogame/AddVideogame.css
@@ -26,16 +26,21 @@ h3{
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    flex-direction: column;
 }
 
 .textarea{
     width: 400px;
     height: 100px;
     border-radius:15px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
 
 .input-field label{
-    margin: 20px;
+    margin: 10px;
+    font-size: 30px;
 }
 
 .extra-text{
@@ -52,10 +57,19 @@ h3{
     font-family: "Lucida Console", "Courier New", monospace;
 }
 
-.input{
-border-radius: 15px;
-}
-
 .error{
     color: red;
+    padding-top: 15px;
+}
+
+.custom-select{
+    display: flex;
+    flex-direction: column;
+}
+
+.inputAdd {
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 15px;
 }
